@@ -24,11 +24,9 @@
 /*
  * @test
  * @summary Verify javac can read record classfiles it writes
- * @compile Record.java
- * @compile WriteReadTest.java
+ * @compile --enable-preview -source ${jdk.version} Record.java
+ * @compile --enable-preview -source ${jdk.version} WriteReadTest.java
  */
 public class WriteReadTest {
-
     Record1 r1;
-
 }
